Feature: add vue-flow
- using the vue-flow
- add the savestructureConfigDictRequest
   - to save the node position
- implement the
  - `[user]/projects/[project]/project.vue`

- using the vuetify icon with 'mdi-svg'
  - https://vuetifyjs.com/en/features/icon-fonts/#usage
